Refactor validatePermission logic for reduce complexity